Restructured Tumblr photos container to fix overflow not hiding content at rounded corners.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,36 +239,34 @@ header{
     }
 }
 
-.fadein img {
-    opacity: 0;
-    // Absolute positioning is an accessibility issue, but good for now.
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    @include fade($num: 20, $fade: 1, $visible: 9);
-}
-
 .panel-tumblr{
     background-color: $panel-default-heading-bg;
     position: relative;
     overflow: hidden;
-    min-height: 371px;
-    max-height: 371px;
+    min-height: 374px;
+    max-height: 374px;
 
     &:before{
         @include loading-text('содржина од Tumblr');
         z-index: 0;
     }
 
-    img{
-        min-width: 100%;
-        max-width: 100%;
-        height: auto;
-        overflow: hidden;
-        border-radius: $border-radius-base;
+    .fadein {
+
+        img {
+            opacity: 0;
+            // Absolute positioning is an accessibility issue, but good for now.
+            position: absolute;
+            margin: auto;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            @include fade($num: 20, $fade: 1, $visible: 9);
+            min-width: 100%;
+            max-width: 100%;
+            height: auto;
+        }
     }
 }
 
